fix(font-editor): add letter spacing

--- a/modules/font-editor/src/css/font-editor.scss
+++ b/modules/font-editor/src/css/font-editor.scss
@@ -162,7 +162,7 @@ $fontEditor-control-button-padding: 8px 28px;
 
   &-fontFamily,
   &-fontWeight,
-  &-lineHeight {
+  &-letterSpacing {
     margin-bottom: $fontEditor-dropdown-filed-margin-bottom;
   }
 
