--- a/modules/section-scroll/src/css/section-scroll.scss
+++ b/modules/section-scroll/src/css/section-scroll.scss
@@ -37,3 +37,7 @@ $sectionScroll: "pj-sectionScroll" !default;
   margin: 0;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+.h-0 {
+  height: 0;
+}
